Added responsive background-image: cover

--- a/index.html
+++ b/index.html
@@ -4,33 +4,44 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>All about Mika</title>
+    <style>
+        header {
+            background-image: url('background-image.webp');
+            background-repeat: no-repeat;
+            background-size: cover;
+            background-position: center;
+        }
+    </style>
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
     <header>
-        <h1 id="title">MIKA</h1>
+        <div class="overlay">
+            <h1 id="title">MIKA</h1>
     
-    <nav class="nav-bar">
-        <ul class="nav-menu">
-            <li class="nav-item">
-                <a href="#albums" class="nav-link">Albums</a>
-            </li>
-            <li class="nav-item">
-                <a href="#videos" class="nav-link">Videos</a>
-            </li>
-            <li class="nav-item">
-                <a href="#trivia" class="nav-link">Trivia</a>
-            </li>
-            <li class="nav-item">
-                <a href="#concert-ticket-purchase-form" class="nav-link">Concert Ticket Purchase Form</a>
-            </li>
-        </ul>
-        <div class="hamburger"> 
-            <span class="bar"></span>
-            <span class="bar"></span>
-            <span class="bar"></span>
+        <nav class="nav-bar">
+            <ul class="nav-menu">
+                <li class="nav-item">
+                    <a href="#albums" class="nav-link">Albums</a>
+                </li>
+                <li class="nav-item">
+                    <a href="#videos" class="nav-link">Videos</a>
+                </li>
+                <li class="nav-item">
+                    <a href="#trivia" class="nav-link">Trivia</a>
+                </li>
+                <li class="nav-item">
+                    <a href="#concert-ticket-purchase-form" class="nav-link">Concert Ticket Purchase Form</a>
+                </li>
+            </ul>
+            <div class="hamburger"> 
+                <span class="bar"></span>
+                <span class="bar"></span>
+                <span class="bar"></span>
+            </div>
+        </nav>
+
         </div>
-    </nav>
     </header>
 
     <main>
