--- a/index.html
+++ b/index.html
@@ -125,6 +125,11 @@
                         <label for="email">Email:</label>
                         <input type="email" id="email" name="email" required>
                     </div>
+                    <div class="form-field">
+                        <label for="age">Age:<br> <small style="font-size:75%; color:grey;">(Choose between 18–64)</small></label>
+                        <input type="range" id="age" name="age" min="18" max="64" oninput="displayAgeValue(this.value)" required>
+                        <span id="age-display"></span>
+                    </div>
                 </fieldset>
 
                 <fieldset>
@@ -140,6 +145,14 @@
                             <option value="mail">Physical ticket</option>
                             <option value="e-ticket">E-ticket</option>
                         </select>
+                    </div>
+                    <div class="form-field">
+                        <label for="concert-date">Concert date:</label>
+                        <input type="date" id="concert-date" name="date" min="2023-08-25" max="2023-08-27" required>
+                    </div>
+                    <div class="form-field">
+                        <label for="bracelet-colour">Bracelet colour:</label>
+                        <input type="color" id="bracelet-colour" name="colour">
                     </div>
                 </fieldset>
 
