Carousel in picture+source+srcset responsive imgs

--- a/index.html
+++ b/index.html
@@ -4,14 +4,6 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>All about Mika</title>
-    <style>
-        header {
-            background-image: url('background-image.webp');
-            background-repeat: no-repeat;
-            background-size: cover;
-            background-position: center;
-        }
-    </style>
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
@@ -84,20 +76,20 @@
                 <h2>Videos</h2>
 
                 <div class="grid-container">
-                    <div class="video-wrapper" id="video1">
-                        <div class="video-container" id="video1">
+                    <div class="video-wrapper" id="video_1">
+                        <div class="video-container" id="video_1">
                             <iframe src="https://www.youtube.com/embed/Sz6-8LoLeAo" frameborder="0" allowfullscreen></iframe>
                         </div>
                         <p class="video-caption">Mika in EuroVision 2022</p>
                     </div>
-                    <div class="video-wrapper" id="video2">
-                        <div class="video-container" id="video2">
+                    <div class="video-wrapper" id="video_2">
+                        <div class="video-container" id="video_2">
                             <iframe src="https://www.youtube.com/embed/8TEC8KUp4Jc" frameborder="0" allowfullscreen></iframe>
                         </div>
                         <p class="video-caption">Mika - Summer Tour Trailer 2023</p>
                     </div>
-                    <div class="video-wrapper" id="video3">
-                        <div class="video-container" id="video3">
+                    <div class="video-wrapper" id="video_3">
+                        <div class="video-container" id="video_3">
                             <iframe src="https://www.youtube.com/embed/WaVrf-i4w94" frameborder="0" allowfullscreen></iframe>
                         </div>
                         <p class="video-caption">Mika - "Grace Kelly" ft. L'Orchestra Sinfonica e Coro Affinis Consort</p>
@@ -121,6 +113,46 @@
             </aside>
 
         </div>
+
+        <section id="photos">
+
+            <h2>Photos</h2>
+
+            <div class="carousel">
+                <picture id="photo_1">
+                    <source media="(min-width: 768px)" srcset="images/carousel-image_1_564px.jpg">
+                    <img src="images/carousel-image_1_384px.jpg" alt="Mika performing at Isle of Wight Festival 2023">
+                </picture>
+                <picture id="photo_2">
+                    <source media="(min-width: 768px)" srcset="images/carousel-image_2_564px.jpg">
+                    <img src="images/carousel-image_2_384px.jpg" alt="Mika performing at Isle of Wight Festival 2023">
+                </picture>
+                <picture id="photo_3">
+                    <source media="(min-width: 768px)" srcset="images/carousel-image_3_564px.jpg">
+                    <img src="images/carousel-image_3_384px.jpg" alt="Mika performing at Isle of Wight Festival 2023">
+                </picture>
+                <picture id="photo_4">
+                    <source media="(min-width: 768px)" srcset="images/carousel-image_4_564px.jpg">
+                    <img src="images/carousel-image_4_384px.jpg" alt="Mika performing at Seol Jazz Festival 2023">
+                </picture>
+                <picture id="photo_5">
+                    <source media="(min-width: 768px)" srcset="images/carousel-image_5_564px.jpg">
+                    <img src="images/carousel-image_5_384px.jpg" alt="Mika performing at Seoul Jazz Festival 2023">
+                </picture>
+                <picture id="photo_6">
+                    <source media="(min-width: 768px)" srcset="images/carousel-image_6_564px.jpg">
+                    <img src="images/carousel-image_6_384px.jpg" alt="Mika performing at Seoul Jazz Festival 2023">
+                </picture>
+                <picture id="photo_7">
+                    <source media="(min-width: 768px)" srcset="images/carousel-image_7_564px.jpg">
+                    <img src="images/carousel-image_7_384px.jpg" alt="Mika performing at Seoul Jazz Festival 2023">
+                </picture>
+                <picture id="photo_8">
+                    <source media="(min-width: 768px)" srcset="images/carousel-image_8_564px.jpg">
+                    <img src="images/carousel-image_8_384px.jpg" alt="Mika preparing to perform at Seoul Jazz Festival 2023">
+                </picture>
+            </div>
+        </section>
 
         <section id="concert-ticket-purchase-form">
 
@@ -196,7 +228,6 @@
             </form>
         </section>
 
-        </section>
     </main>
 
     <footer>
