--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>All about Mika</title>
     <link rel="stylesheet" href="styles.css">
 </head>
-<body>
+<body data-theme="light">
     <header>
         <div class="overlay">
             <h1 id="title">MIKA</h1>
@@ -33,6 +33,12 @@
                 <span class="bar"></span>
                 <span class="bar"></span>
                 <span class="bar"></span>
+            </div>
+            <!-- The dark mode toggle -->
+            <div class="toggle-switch">
+                <input type="checkbox" id="dark-mode-toggle" class="toggle-switch-checkbox">
+                <label for="dark-mode-toggle" class="toggle-switch-label"></label>
+                <span id="toggle-text">Light mode</span>
             </div>
         </nav>
 
@@ -208,23 +214,26 @@
                 <fieldset>
                     <legend>Your experience with Mika</legend>
                     
-                    <label for="fav-album">Favourite album:</label><br>
-                    <input type="radio" id="album1" name="fav-album" value="Life in Cartoon Motion (2007)">
-                    <label for="album1">Life in Cartoon Motion (2007)</label><br>
-                    <input type="radio" id="album2" name="fav-album" value="The Boy Who Knew Too Much (2012)">
-                    <label for="album2">The Boy Who Knew Too Much (2012)</label><br>
-                    <input type="radio" id="album3" name="fav-album" value="The Origin of Love (2012)">
-                    <label for="album3">The Origin of Love (2012)</label><br>
-                    <input type="radio" id="album4" name="fav-album" value="No Place in Heaven (2015)">
-                    <label for="album5">No Place in Heaven (2015)</label><br>
-                    <input type="radio" id="album5" name="fav-album" value="My Name is Michael Holbrook (2019)">
-                    <label for="album5">My Name is Michael Holbrook (2019)</label><br>
-                    <br>
-                    <label for="reason">Reason you like Mika:</label><br>
-                    <textarea id="reason" name="reason" rows="4" cols="50"></textarea>
+                    <div class="form-field">
+                        <label for="fav-album">Favourite album:</label><br>
+                        <input type="radio" id="album1" name="fav-album" value="Life in Cartoon Motion (2007)">
+                        <label for="album1">Life in Cartoon Motion (2007)</label><br>
+                        <input type="radio" id="album2" name="fav-album" value="The Boy Who Knew Too Much (2012)">
+                        <label for="album2">The Boy Who Knew Too Much (2012)</label><br>
+                        <input type="radio" id="album3" name="fav-album" value="The Origin of Love (2012)">
+                        <label for="album3">The Origin of Love (2012)</label><br>
+                        <input type="radio" id="album4" name="fav-album" value="No Place in Heaven (2015)">
+                        <label for="album5">No Place in Heaven (2015)</label><br>
+                        <input type="radio" id="album5" name="fav-album" value="My Name is Michael Holbrook (2019)">
+                        <label for="album5">My Name is Michael Holbrook (2019)</label><br>
+                    </div>
+                    <div class="form-field">
+                        <label for="reason">Reason you like Mika:</label><br>
+                        <textarea id="reason" name="reason" rows="4" cols="50"></textarea>
+                    </div>
                 </fieldset>
 
-                <button type="submit">Purchase Ticket(s)</button>
+                <button type="submit" id="purchase-ticket">Purchase ticket(s)</button>
             </form>
         </section>
 
